[package]
name = "token_sale"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_sale"

[features]
default       = []
no-entrypoint = []
cpi           = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed","idl-build"] }

anchor-spl  = { version = "0.31.1", features = [
    "token",                # SPL-Token CPI helpers
    "associated_token",     # ATA helpers   ← underscore ✔
    "idl-build"             # lets the Accounts derive see TokenAccount/Mint
] }
